--- a/resources/sass/_note.scss
+++ b/resources/sass/_note.scss
@@ -105,6 +105,11 @@
     }
   }
 
+.condition_display{
+  border: 1px solid $grey-3;
+  padding-bottom: 50px;
+}
+
 .icon_display{
     text-align: center;
 }
