--- a/resources/sass/_photo-detail.scss
+++ b/resources/sass/_photo-detail.scss
@@ -58,3 +58,36 @@
     margin: 0;
   }
 }
+
+.note-icon{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.detail-back {
+  align-items: center;
+  background: #fff;
+  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, .1);
+  display: flex;
+  height: 4rem;
+  justify-content: space-between;
+  left: 0;
+  padding: 2%;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 3;
+
+  &__brand {
+    color: inherit;
+    font-family: Merriweather, serif;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-decoration: none;
+
+    &:hover {
+      opacity: .6;
+    }
+  }
+}
