--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -68,6 +68,48 @@
 
 }
 
+.change{
+  display: inline-block;
+  background-color: #02bcf5;/*背景色*/
+  color: #FFF;/*文字色*/
+  font-size: 1em;/*文字サイズ*/
+  line-height: 1;
+  text-decoration: none;
+  letter-spacing: 0.05em;/*字間*/
+  padding: 0.2em 1em;/*ボタン内の余白*/
+  border-radius: 3px;/*角の丸み*/
+    cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);/*影*/
+  -webkit-tap-highlight-color: transparent;
+  transition: .3s ease-out;/*変化を緩やかに*/
+}
+
+.raised:hover{
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);/*浮き上がるように*/
+}
+
+.cancel{
+  display: inline-block;
+  background-color: #f50000;/*背景色*/ 
+  color: #FFF;/*文字色*/
+  font-size: 1em;/*文字サイズ*/
+  line-height: 1;
+  text-decoration: none;
+  letter-spacing: 0.05em;/*字間*/
+  padding: 0.2em 1em;/*ボタン内の余白*/
+  margin-right: 1em;
+  border-radius: 3px;/*角の丸み*/
+    cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);/*影*/
+  -webkit-tap-highlight-color: transparent;
+  transition: .3s ease-out;/*変化を緩やかに*/
+}
+
+
+.raised:hover{
+    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14), 0 1px 7px 0 rgba(0,0,0,0.12), 0 3px 1px -1px rgba(0,0,0,0.2);/*浮き上がるように*/
+}
+
 .button2 {
   background: transparent;
   border-radius: .25rem;
@@ -95,4 +137,40 @@
       font-size: 30px;
     }
   }
+  &--back {
+    .icon {
+      color: black;
+      font-size: 30px;
+      float: left;
+    }
+  }
+}
+
+.buttonBack {
+  background: transparent;
+  border-radius: .25rem;
+  cursor: pointer;
+  float: right;
+  font-family: inherit;
+  font-size: 1rem;
+  line-height: 1;
+  outline: none;
+  padding: .5rem .75rem;
+  text-decoration: none;
+  
+  transition:
+    border-color 300ms ease-in-out,
+    color 300ms ease-in-out;
+
+  &--back {
+    .icon {
+      color: black;
+      font-size: 30px;
+    }
+  }
+}
+
+.button-submit{
+  padding-top: 2em;
+  text-align: center;
 }
