--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   align-items: center;
-  background: #fff;
+  background: #66CCFF;
   box-shadow: 0 3px 8px 0 rgba(0, 0, 0, .1);
   display: flex;
   height: 4rem;
