デザイン修正・各ユーザーの投稿表示機能実装

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -249,7 +249,6 @@ img {
 .note-icon {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .detail-back {
@@ -929,11 +928,15 @@ button {
 }
 
 .condition_display {
-  border: 1px solid #dedede;
   padding-bottom: 50px;
 }
 
 .icon_display {
+  text-align: center;
+}
+
+.icon_display_edit {
+  border: 5px solid #dedede;
   text-align: center;
 }
 
