--- a/resources/sass/_note.scss
+++ b/resources/sass/_note.scss
@@ -106,11 +106,15 @@
   }
 
 .condition_display{
-  border: 1px solid $grey-3;
   padding-bottom: 50px;
 }
 
 .icon_display{
+  text-align: center;
+}
+
+.icon_display_edit{
+    border: 5px solid $grey-3;
     text-align: center;
 }
 
