--- a/resources/sass/_message.scss
+++ b/resources/sass/_message.scss
@@ -6,3 +6,12 @@
   margin-bottom: 1.5rem;
   padding: 1rem;
 }
+
+.deletemessage {
+  background: rgb(249, 215, 215);
+  border: 1px solid #e24141;
+  border-radius: .25rem;
+  color: #731111;
+  margin-bottom: 1.5rem;
+  padding: 1rem;
+}
