--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,6 +50,18 @@ img {
   margin-bottom: 2rem;
 }
 
+@media screen and (max-width: 479px) {
+  .grid {
+    display: inline;
+    grid-gap: 0 2%;
+    grid-template-columns: repeat(auto-fit, 32%);
+  }
+
+  .grid__item {
+    margin-bottom: 2rem;
+  }
+}
+
 .navbar {
   align-items: center;
   background: #66CCFF;
@@ -88,6 +100,48 @@ img {
 
 .navbar__item {
   margin-left: 1rem;
+}
+
+@media screen and (max-width: 479px) {
+  .navbar {
+    align-items: center;
+    background: #66CCFF;
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1);
+    display: flex;
+    height: 4rem;
+    justify-content: space-between;
+    left: 0;
+    padding: 2%;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 3;
+  }
+
+  .navbar__brand {
+    color: inherit;
+    font-family: Merriweather, serif;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-decoration: none;
+  }
+
+  .navbar__brand:visited {
+    color: inherit;
+  }
+
+  .navbar__brand:hover {
+    opacity: 0.6;
+  }
+
+  .navbar__menu {
+    align-items: center;
+    display: flex;
+  }
+
+  .navbar__item {
+    margin-left: 0;
+  }
 }
 
 .photo {
@@ -276,6 +330,108 @@ img {
 
 .detail-back__brand:hover {
   opacity: 0.6;
+}
+
+.icon--wakeup {
+  color: #C0C0C0;
+}
+
+@media screen and (max-width: 479px) {
+  .photo-detail {
+    display: initial;
+    justify-content: space-between;
+  }
+
+  .photo-detail--column {
+    flex-direction: column;
+  }
+
+  .photo-detail--column .photo-detail__pane {
+    width: 100%;
+  }
+
+  .photo-detail--column .photo-detail__image {
+    cursor: zoom-out;
+  }
+
+  .photo-detail__pane {
+    width: 100%;
+  }
+
+  .photo-detail__image {
+    cursor: zoom-in;
+    margin-bottom: 1.5rem;
+  }
+
+  .photo-detail__image figcaption {
+    margin-top: 0.5rem;
+  }
+
+  .photo-detail__title {
+    font-size: 1.2rem;
+    margin: 1.5rem 0;
+  }
+
+  .photo-detail__title .icon {
+    margin-right: 0.5em;
+  }
+
+  .photo-detail__comments {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .photo-detail__commentItem {
+    border-bottom: 1px solid #dedede;
+    margin-bottom: 1.5rem;
+    padding: 0 0 1.5rem 0;
+  }
+
+  .photo-detail__commentBody {
+    margin: 0 0 1rem 0;
+  }
+
+  .photo-detail__commentInfo {
+    color: #8a8a8a;
+    margin: 0;
+  }
+
+  .photo-detail__body_border {
+    border: 1px solid #dedede;
+  }
+
+  .note-icon {
+    display: flex;
+    justify-content: center;
+  }
+
+  .detail-back {
+    align-items: center;
+    background: #fff;
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.1);
+    display: flex;
+    height: 4rem;
+    justify-content: space-between;
+    left: 0;
+    padding: 2%;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 3;
+  }
+
+  .detail-back__brand {
+    color: inherit;
+    font-family: Merriweather, serif;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-decoration: none;
+  }
+
+  .detail-back__brand:hover {
+    opacity: 0.6;
+  }
 }
 
 .photo-form {
@@ -752,7 +908,7 @@ button {
   display: block;
   font-size: 16px;
   padding: 12px 15px;
-  width: 480px;
+  width: 100%;
   transition: 0.8s;
   border-radius: 0;
 }
@@ -839,6 +995,26 @@ button {
 
 .note_item {
   display: flex;
+}
+
+.submit_button {
+  text-align: center;
+}
+
+@media screen and (max-width: 479px) {
+  .note-form {
+    background: #fff;
+    border-radius: 0.25rem;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    max-height: 75vh;
+    max-width: 600px;
+    overflow: scroll;
+    padding: 1.5rem;
+    position: absolute;
+    right: 5%;
+    top: 3.5rem;
+    width: 90%;
+  }
 }
 
 .note {
