--- a/resources/sass/_photo-detail.scss
+++ b/resources/sass/_photo-detail.scss
@@ -91,3 +91,106 @@
   }
 }
 
+.icon{
+  &--wakeup {
+      color: 	#C0C0C0;
+  }
+}
+
+@media screen and ( max-width:479px ) {
+  .photo-detail {
+    display: initial;
+    $component: &;
+    justify-content: space-between;
+  
+    &--column {
+      flex-direction: column;
+  
+      #{$component}__pane {
+        width: 100%;
+      }
+  
+      #{$component}__image {
+        cursor: zoom-out;
+      }
+    }
+  
+    &__pane {
+      width: 100%;
+    }
+  
+    &__image {
+      cursor: zoom-in;
+      margin-bottom: 1.5rem;
+  
+      figcaption {
+        margin-top: .5rem;
+      }
+    }
+  
+    &__title {
+      font-size: 1.2rem;
+      margin: 1.5rem 0;
+  
+      .icon {
+        margin-right: .5em;
+      }
+    }
+  
+    &__comments {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+  
+    &__commentItem {
+      border-bottom: 1px solid $grey-3;
+      margin-bottom: 1.5rem;
+      padding: 0 0 1.5rem 0;
+    }
+  
+    &__commentBody {
+      margin: 0 0 1rem 0;
+    }
+  
+    &__commentInfo {
+      color: $grey-2;
+      margin: 0;
+    }
+    &__body_border{
+      border: 1px solid $grey-3;
+    }
+  }
+  
+  .note-icon{
+    display: flex;
+    justify-content: center;
+  }
+  
+  .detail-back {
+    align-items: center;
+    background: #fff;
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, .1);
+    display: flex;
+    height: 4rem;
+    justify-content: space-between;
+    left: 0;
+    padding: 2%;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 3;
+  
+    &__brand {
+      color: inherit;
+      font-family: Merriweather, serif;
+      font-weight: bold;
+      font-size: 1.2rem;
+      text-decoration: none;
+  
+      &:hover {
+        opacity: .6;
+      }
+    }
+  }
+}
