--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -37,3 +37,46 @@
     margin-left: 1rem;
   }
 }
+
+
+@media screen and ( max-width:479px ) {
+  .navbar {
+    align-items: center;
+    background: #66CCFF;
+    box-shadow: 0 3px 8px 0 rgba(0, 0, 0, .1);
+    display: flex;
+    height: 4rem;
+    justify-content: space-between;
+    left: 0;
+    padding: 2%;
+    position: fixed;
+    right: 0;
+    top: 0;
+    z-index: 3;
+  
+    &__brand {
+      color: inherit;
+      font-family: Merriweather, serif;
+      font-weight: bold;
+      font-size: 1.2rem;
+      text-decoration: none;
+  
+      &:visited {
+        color: inherit;
+      }
+  
+      &:hover {
+        opacity: .6;
+      }
+    }
+  
+    &__menu {
+      align-items: center;
+      display: flex;
+    }
+  
+    &__item {
+      margin-left: 0;
+    }
+  }
+}
