--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1162,13 +1162,14 @@ button {
 
 .input-wide {
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
 
 .text_edit {
   background: #f8f8f8;
   display: block;
   font-size: 16px;
+  width: 100%;
   padding: 12px 15px;
   transition: 0.8s;
   border-radius: 0;
@@ -1207,5 +1208,28 @@ button {
   overflow: hidden;
   width: 50%;
   height: 100%;
+}
+
+.display-item_edit {
+  display: flex;
+}
+
+@media screen and (max-width: 479px) {
+  .text_edit {
+    background: #f8f8f8;
+    display: block;
+    font-size: 16px;
+    width: 100%;
+    padding: 12px 15px;
+    transition: 0.8s;
+    border-radius: 0;
+  }
+
+  .ps {
+    position: absolute;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+  }
 }
 
