--- a/resources/sass/_note-edit.scss
+++ b/resources/sass/_note-edit.scss
@@ -25,8 +25,7 @@
 
 .input-wide{
     display: flex;
-    
-    align-items: center;
+    justify-content: center;
     
 }
 
@@ -34,6 +33,7 @@
         background: #f8f8f8;
         display: block;
         font-size: 16px;
+         width: 100%;
         padding: 12px 15px;
         transition: 0.8s;
         border-radius: 0;
@@ -69,4 +69,27 @@
   overflow: hidden;
   width: 50%;
   height: 100%;
+}
+
+.display-item_edit{
+  display: flex;
+}
+
+@media screen and ( max-width:479px ) {
+  .text_edit{
+    background: #f8f8f8;
+    display: block;
+    font-size: 16px;
+    width: 100%;
+    padding: 12px 15px;
+    transition: 0.8s;
+    border-radius: 0;
+  }
+  
+  .ps{
+  position: absolute;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  }
 }
