--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1278,15 +1278,17 @@ button {
   width: 100%;
   postion: relative;
   background-color: #000000;
+  display: inline-block;
 }
 
 .top_page img {
   opacity: 0.7;
+  display: block;
 }
 
 .top_page h1 {
   font-size: 3em;
-  text-shadow: -1px -2px 3px #808080;
+  text-shadow: 1px 2px 3px #808080;
 }
 
 .top_page p {
