--- a/resources/sass/_top.scss
+++ b/resources/sass/_top.scss
@@ -46,7 +46,8 @@
   position: absolute;
   text-align: center;
   top: 33%; 
-  left: 50%; 
+  left: 50%;
+  width: 75%;
   transform: translateY(-50%) translateX(-50%); 
   -webkit-transform: translateY(-50%) translateX(-50%)
 }
