--- a/public/css/app.css
+++ b/public/css/app.css
@@ -676,6 +676,30 @@ img {
   /*変化を緩やかに*/
 }
 
+.chart_display {
+  display: inline-block;
+  background-color: #02bcf5;
+  /*背景色*/
+  color: #FFF;
+  /*文字色*/
+  font-size: 1em;
+  /*文字サイズ*/
+  line-height: 1;
+  text-decoration: none;
+  letter-spacing: 0.05em;
+  /*字間*/
+  padding: 0.5em 1em;
+  /*ボタン内の余白*/
+  border-radius: 3px;
+  /*角の丸み*/
+  cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  /*影*/
+  -webkit-tap-highlight-color: transparent;
+  transition: 0.3s ease-out;
+  /*変化を緩やかに*/
+}
+
 @media screen and (max-width: 479px) {
   .button_top {
     border: 3px solid #0196c4;
@@ -720,6 +744,51 @@ img {
 
 .form__button {
   text-align: right;
+}
+
+.form_chart {
+  display: flex;
+  justify-content: center;
+}
+
+.year_title {
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-radius: 3px;
+  /*ボックス角の丸み*/
+  border: 2px solid #ddd;
+  /*枠線*/
+  box-sizing: border-box;
+  /*横幅の解釈をpadding, borderまでとする*/
+}
+
+.year_letter {
+  margin-left: 0.5em;
+  margin-right: 2em;
+}
+
+.month_letter {
+  margin-left: 0.5em;
+  margin-right: 2em;
+}
+
+.month_title {
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-radius: 3px;
+  /*ボックス角の丸み*/
+  border: 2px solid #ddd;
+  /*枠線*/
+  box-sizing: border-box;
+  /*横幅の解釈をpadding, borderまでとする*/
+}
+
+.submit_button_chart {
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .tab {
