--- a/public/css/app.css
+++ b/public/css/app.css
@@ -93,6 +93,21 @@ img {
   opacity: 0.6;
 }
 
+.navbar__chart {
+  color: inherit;
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+.navbar__chart:visited {
+  color: inherit;
+}
+
+.navbar__chart:hover {
+  opacity: 0.6;
+}
+
 .navbar__menu {
   align-items: center;
   display: flex;
@@ -122,7 +137,7 @@ img {
     color: inherit;
     font-family: Merriweather, serif;
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 0.8rem;
     text-decoration: none;
   }
 
@@ -134,13 +149,24 @@ img {
     opacity: 0.6;
   }
 
+  .navbar__chart {
+    color: inherit;
+    font-weight: bold;
+    font-size: 0.8rem;
+    text-decoration: none;
+  }
+
+  .navbar__chart:visited {
+    color: inherit;
+  }
+
+  .navbar__chart:hover {
+    opacity: 0.6;
+  }
+
   .navbar__menu {
     align-items: center;
     display: flex;
-  }
-
-  .navbar__item {
-    margin-left: 0;
   }
 }
 
@@ -676,30 +702,6 @@ img {
   /*変化を緩やかに*/
 }
 
-.chart_display {
-  display: inline-block;
-  background-color: #02bcf5;
-  /*背景色*/
-  color: #FFF;
-  /*文字色*/
-  font-size: 1em;
-  /*文字サイズ*/
-  line-height: 1;
-  text-decoration: none;
-  letter-spacing: 0.05em;
-  /*字間*/
-  padding: 0.5em 1em;
-  /*ボタン内の余白*/
-  border-radius: 3px;
-  /*角の丸み*/
-  cursor: pointer;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-  /*影*/
-  -webkit-tap-highlight-color: transparent;
-  transition: 0.3s ease-out;
-  /*変化を緩やかに*/
-}
-
 @media screen and (max-width: 479px) {
   .button_top {
     border: 3px solid #0196c4;
@@ -716,6 +718,71 @@ img {
     padding: 0.25rem 0.5rem;
     text-decoration: none;
     transition: border-color 300ms ease-in-out, color 300ms ease-in-out;
+  }
+
+  .button {
+    border: 1px solid #dedede;
+    border-radius: 0.25rem;
+    color: #8a8a8a;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    font-size: 0.8rem;
+    line-height: 1;
+    outline: none;
+    padding: 0.3rem 0.3rem;
+    text-decoration: none;
+    transition: border-color 300ms ease-in-out, color 300ms ease-in-out;
+  }
+
+  .button:hover {
+    border-color: #333;
+    color: inherit;
+  }
+
+  .button .icon {
+    margin-right: 0.5em;
+  }
+
+  .button--link {
+    border: 0;
+  }
+
+  .button--inverse {
+    background: #222;
+    border-color: #222;
+    color: #fff;
+    transition: opacity 300ms ease-in-out;
+  }
+
+  .button--inverse:hover {
+    background: #222;
+    color: #fff;
+    opacity: 0.8;
+  }
+
+  .button--fluid {
+    width: 100%;
+  }
+
+  .button--like .icon {
+    color: #e4406f;
+  }
+
+  .button--liked {
+    background: #e4406f;
+    border-color: #e4406f;
+    color: #fff;
+  }
+
+  .button--liked .icon {
+    color: #fff;
+  }
+
+  .button--liked:hover {
+    border-color: #e4406f;
+    color: #fff;
+    opacity: 0.8;
   }
 }
 
@@ -744,51 +811,6 @@ img {
 
 .form__button {
   text-align: right;
-}
-
-.form_chart {
-  display: flex;
-  justify-content: center;
-}
-
-.year_title {
-  height: 100%;
-  margin-top: auto;
-  margin-bottom: auto;
-  border-radius: 3px;
-  /*ボックス角の丸み*/
-  border: 2px solid #ddd;
-  /*枠線*/
-  box-sizing: border-box;
-  /*横幅の解釈をpadding, borderまでとする*/
-}
-
-.year_letter {
-  margin-left: 0.5em;
-  margin-right: 2em;
-}
-
-.month_letter {
-  margin-left: 0.5em;
-  margin-right: 2em;
-}
-
-.month_title {
-  height: 100%;
-  margin-top: auto;
-  margin-bottom: auto;
-  border-radius: 3px;
-  /*ボックス角の丸み*/
-  border: 2px solid #ddd;
-  /*枠線*/
-  box-sizing: border-box;
-  /*横幅の解釈をpadding, borderまでとする*/
-}
-
-.submit_button_chart {
-  height: 100%;
-  margin-top: auto;
-  margin-bottom: auto;
 }
 
 .tab {
@@ -1433,24 +1455,169 @@ button {
 
 .chart {
   display: block;
-  width: 60%;
-  height: 60%;
+  width: 100%;
+  height: 40%;
   margin: auto;
 }
 
-.chart__item {
-  margin-bottom: 2rem;
+.chart_p {
+  text-align: center;
+}
+
+.border_chart {
+  text-align: center;
+  border-bottom: 1px solid #ccc;
+}
+
+.form_chart {
+  display: flex;
+  justify-content: center;
+}
+
+.year_title {
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-radius: 3px;
+  /*ボックス角の丸み*/
+  border: 2px solid #ddd;
+  /*枠線*/
+  box-sizing: border-box;
+  /*横幅の解釈をpadding, borderまでとする*/
+}
+
+.year_letter {
+  margin-left: 0.5em;
+  margin-right: 2em;
+}
+
+.month_letter {
+  margin-left: 0.5em;
+  margin-right: 2em;
+}
+
+.month_title {
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+  border-radius: 3px;
+  /*ボックス角の丸み*/
+  border: 2px solid #ddd;
+  /*枠線*/
+  box-sizing: border-box;
+  /*横幅の解釈をpadding, borderまでとする*/
+}
+
+.submit_button_chart {
+  height: 100%;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.chart_display {
+  display: inline-block;
+  background-color: #02bcf5;
+  /*背景色*/
+  color: #FFF;
+  /*文字色*/
+  font-size: 1em;
+  /*文字サイズ*/
+  line-height: 1;
+  text-decoration: none;
+  letter-spacing: 0.05em;
+  /*字間*/
+  padding: 0.5em 1em;
+  /*ボタン内の余白*/
+  border-radius: 3px;
+  /*角の丸み*/
+  cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  /*影*/
+  -webkit-tap-highlight-color: transparent;
+  transition: 0.3s ease-out;
+  /*変化を緩やかに*/
+}
+
+.image-chart {
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 0 0.5em 2em 0;
+  padding: 10px;
+  float: left;
+  background-color: #fff;
 }
 
 @media screen and (max-width: 479px) {
-  .chart {
-    display: inline;
-    grid-gap: 0 2%;
-    grid-template-columns: repeat(auto-fit, 32%);
+  .form_chart {
+    display: flex;
+    justify-content: center;
   }
 
-  .chart__item {
-    margin-bottom: 2rem;
+  .year_title {
+    height: 100%;
+    width: 15%;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-radius: 3px;
+    /*ボックス角の丸み*/
+    border: 2px solid #ddd;
+    /*枠線*/
+    box-sizing: border-box;
+    /*横幅の解釈をpadding, borderまでとする*/
+  }
+
+  .year_letter {
+    margin-left: 0.5em;
+    margin-right: 2em;
+  }
+
+  .month_letter {
+    margin-left: 0.5em;
+    margin-right: 2em;
+  }
+
+  .month_title {
+    height: 100%;
+    width: 15%;
+    margin-top: auto;
+    margin-bottom: auto;
+    border-radius: 3px;
+    /*ボックス角の丸み*/
+    border: 2px solid #ddd;
+    /*枠線*/
+    box-sizing: border-box;
+    /*横幅の解釈をpadding, borderまでとする*/
+  }
+
+  .submit_button_chart {
+    height: 100%;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .chart_display {
+    display: inline-block;
+    background-color: #02bcf5;
+    /*背景色*/
+    color: #FFF;
+    /*文字色*/
+    font-size: 1em;
+    /*文字サイズ*/
+    line-height: 1;
+    text-decoration: none;
+    letter-spacing: 0.05em;
+    /*字間*/
+    padding: 0.5em 0.5em;
+    /*ボタン内の余白*/
+    border-radius: 3px;
+    /*角の丸み*/
+    cursor: pointer;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+    /*影*/
+    -webkit-tap-highlight-color: transparent;
+    transition: 0.3s ease-out;
+    /*変化を緩やかに*/
   }
 }
 
