--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -225,21 +225,6 @@
   transition: .3s ease-out;/*変化を緩やかに*/
 }
 
-.chart_display{
-  display: inline-block;
-  background-color: #02bcf5;/*背景色*/
-  color: #FFF;/*文字色*/
-  font-size: 1em;/*文字サイズ*/
-  line-height: 1;
-  text-decoration: none;
-  letter-spacing: 0.05em;/*字間*/
-  padding: 0.5em 1em;/*ボタン内の余白*/
-  border-radius: 3px;/*角の丸み*/
-  cursor: pointer;
-  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12), 0 3px 1px -2px rgba(0,0,0,0.2);/*影*/
-  -webkit-tap-highlight-color: transparent;
-  transition: .3s ease-out;/*変化を緩やかに*/
-}
 
 
 @media screen and ( max-width:479px ) {
@@ -260,6 +245,76 @@
   transition:
   border-color 300ms ease-in-out,
   color 300ms ease-in-out;
+  }
+
+  .button {
+    border: 1px solid $grey-3;
+    border-radius: .25rem;
+    color: $grey-2;
+    cursor: pointer;
+    display: inline-block;
+    font-family: inherit;
+    font-size: .8rem;
+    line-height: 1;
+    outline: none;
+    padding: .3rem .3rem;
+    text-decoration: none;
+    transition:
+      border-color 300ms ease-in-out,
+      color 300ms ease-in-out;
+  
+    &:hover {
+      border-color: $grey-1;
+      color: inherit;
+    }
+  
+    .icon {
+      margin-right: .5em;
+    }
+  
+    &--link {
+      border: 0;
+    }
+  
+    &--inverse {
+      background: $text-color;
+      border-color: $text-color;
+      color: #fff;
+      transition: opacity 300ms ease-in-out;
+  
+      &:hover {
+        background: $text-color;
+        color: #fff;
+        opacity: .8;
+      }
+    }
+  
+    &--fluid {
+      width: 100%;
+    }
+  
+    &--like {
+      .icon {
+        color: $red;
+      }
+    }
+  
+    &--liked {
+      background: $red;
+      border-color: $red;
+      color: #fff;
+  
+      .icon {
+        color: #fff;
+      }
+  
+      &:hover {
+        border-color: $red;
+        color: #fff;
+        opacity: .8;
+      }
+    }
+  
   }
 
 }
