--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -28,6 +28,21 @@
     }
   }
 
+  &__chart {
+    color: inherit;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-decoration: none;
+
+    &:visited {
+      color: inherit;
+    }
+
+    &:hover {
+      opacity: .6;
+    }
+  }
+
   &__menu {
     align-items: center;
     display: flex;
@@ -57,7 +72,22 @@
       color: inherit;
       font-family: Merriweather, serif;
       font-weight: bold;
-      font-size: 1.2rem;
+      font-size: 0.8rem;
+      text-decoration: none;
+  
+      &:visited {
+        color: inherit;
+      }
+  
+      &:hover {
+        opacity: .6;
+      }
+    }
+
+    &__chart {
+      color: inherit;
+      font-weight: bold;
+      font-size: 0.8rem;
       text-decoration: none;
   
       &:visited {
@@ -74,8 +104,5 @@
       display: flex;
     }
   
-    &__item {
-      margin-left: 0;
-    }
   }
 }
