--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -18,6 +18,7 @@
     font-weight: bold;
     font-size: 1.2rem;
     text-decoration: none;
+    margin-left: 2em;
 
     &:visited {
       color: inherit;
@@ -27,6 +28,69 @@
       opacity: .6;
     }
   }
+
+  .bm-burger-button {
+    position: fixed;
+    width: 2.5em;
+    height: 2em;
+    left: 1.2em;
+    top: 1.2em;
+    cursor: pointer;
+  }
+  .bm-burger-bars {
+    background-color: #373a47;
+  }
+  .line-style {
+    position: absolute;
+    height: 20%;
+    left: 0;
+    right: 0;
+  }
+  .cross-style {
+    position: absolute;
+    top: 12px;
+    right: 2px;
+    cursor: pointer;
+  }
+  .bm-cross {
+    background: #bdc3c7;
+  }
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  .bm-menu {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1000; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: rgb(63, 63, 65); /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /*0.5 second transition effect to slide in the sidenav*/
+  }
+
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+  .bm-item-list {
+    color: #b8b7ad;
+    margin-left: 10%;
+    font-size: 20px;
+  }
+  .bm-item-list > * {
+    display: flex;
+    text-decoration: none;
+    padding: 0.7em;
+  }
+  .bm-item-list > * > span {
+    margin-left: 10px;
+    font-weight: 700;
+    color: white;
+  }
+
 
   &__chart {
     color: inherit;
@@ -72,8 +136,9 @@
       color: inherit;
       font-family: Merriweather, serif;
       font-weight: bold;
-      font-size: 0.8rem;
+      font-size: 1rem;
       text-decoration: none;
+      margin-left: 3.5em;
   
       &:visited {
         color: inherit;
@@ -104,5 +169,68 @@
       display: flex;
     }
   
+    .bm-burger-button {
+      position: fixed;
+      width: 2.0em;
+      height: 1.5em;
+      left: 1.2em;
+      top: 1.2em;
+      cursor: pointer;
+    }
+    .bm-burger-bars {
+      background-color: #373a47;
+    }
+    .line-style {
+      position: absolute;
+      height: 20%;
+      left: 0;
+      right: 0;
+    }
+    .cross-style {
+      position: absolute;
+      top: 12px;
+      right: 2px;
+      cursor: pointer;
+    }
+    .bm-cross {
+      background: #bdc3c7;
+    }
+    .bm-cross-button {
+      height: 24px;
+      width: 24px;
+    }
+    .bm-menu {
+      height: 100%; /* 100% Full-height */
+      width: 0; /* 0 width - change this with JavaScript */
+      position: fixed; /* Stay in place */
+      z-index: 1000; /* Stay on top */
+      top: 0;
+      left: 0;
+      background-color: rgb(63, 63, 65); /* Black*/
+      overflow-x: hidden; /* Disable horizontal scroll */
+      padding-top: 60px; /* Place content 60px from the top */
+      transition: 0.5s; /*0.5 second transition effect to slide in the sidenav*/
+    }
+  
+    .bm-overlay {
+      background: rgba(0, 0, 0, 0.3);
+    }
+    .bm-item-list {
+      color: #b8b7ad;
+      margin-left: 10%;
+      font-size: 20px;
+    }
+    .bm-item-list > * {
+      display: flex;
+      text-decoration: none;
+      padding: 0.7em;
+      font-size: 1.5rem;
+    }
+    .bm-item-list > * > span {
+      margin-left: 10px;
+      font-weight: 700;
+      color: white;
+    }
   }
+
 }
