--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1784,3 +1784,201 @@ button {
   }
 }
 
+.column-form {
+  background: #fff;
+  border-radius: 0.25rem;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  max-height: 75vh;
+  overflow: scroll;
+  padding: 1.5rem;
+  position: absolute;
+  right: 2%;
+  top: 3.5rem;
+  width: 90%;
+}
+
+li {
+  list-style: none;
+}
+
+.title {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.note-item {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.note-title {
+  text-align: center;
+}
+
+.border {
+  border-bottom: 1px solid #ccc;
+}
+
+.display {
+  display: flex;
+  justify-content: center;
+}
+
+.display-item {
+  display: flex;
+  margin-bottom: 1.5em;
+}
+
+input.width-record {
+  height: 25%;
+  margin: 1em 0 0 1.5em;
+}
+
+input.width-time {
+  height: 25%;
+  margin: 1em 0 0 1.5em;
+}
+
+.image-radio-button {
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  margin: 0 0.5em 2em 0;
+  padding: 10px;
+  float: left;
+  color: #fff;
+  background-color: #fff;
+}
+
+.image-radio-button:hover {
+  background: #eee;
+}
+
+.image-radio-button label {
+  cursor: pointer;
+}
+
+textarea,
+button {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  box-shadow: none;
+  outline: none;
+  border: none;
+}
+
+.text_form {
+  background: #f8f8f8;
+  display: block;
+  font-size: 16px;
+  padding: 12px 15px;
+  width: 100%;
+  transition: 0.8s;
+  border-radius: 0;
+}
+
+.overlay {
+  /*　要素を重ねた時の順番　*/
+  z-index: 1;
+  /*　画面全体を覆う設定　*/
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  /*　画面の中央に要素を表示させる設定　*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.raised {
+  display: inline-block;
+  background-color: #26a69b;
+  /*背景色*/
+  color: #FFF;
+  /*文字色*/
+  font-size: 1em;
+  /*文字サイズ*/
+  line-height: 1;
+  text-decoration: none;
+  letter-spacing: 0.05em;
+  /*字間*/
+  padding: 0.2em 1em;
+  /*ボタン内の余白*/
+  margin-top: 2em;
+  border-radius: 3px;
+  /*角の丸み*/
+  cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  /*影*/
+  -webkit-tap-highlight-color: transparent;
+  transition: 0.3s ease-out;
+  /*変化を緩やかに*/
+}
+
+.modal-content {
+  z-index: 2;
+  margin-top: 5em;
+  padding: 2em;
+  background: #fff;
+}
+
+.modal-delete {
+  z-index: 2;
+  margin-top: 5em;
+  padding: 2em;
+  background: #fff;
+}
+
+.required {
+  display: inline-block;
+  background-color: #ff0000;
+  /*背景色*/
+  color: #FFF;
+  /*文字色*/
+  font-size: 0.8em;
+  /*文字サイズ*/
+  line-height: 1;
+  text-decoration: none;
+  letter-spacing: 0.05em;
+  /*字間*/
+  padding: 0.2em 0.4em;
+  /*ボタン内の余白*/
+  margin-right: 0.5em;
+  border-radius: 3px;
+  /*角の丸み*/
+  cursor: pointer;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
+  /*影*/
+  -webkit-tap-highlight-color: transparent;
+  transition: 0.3s ease-out;
+  /*変化を緩やかに*/
+}
+
+.note_item {
+  display: flex;
+}
+
+.submit_button {
+  text-align: center;
+}
+
+@media screen and (max-width: 479px) {
+  .column-form {
+    background: #fff;
+    border-radius: 0.25rem;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+    max-height: 75vh;
+    max-width: 600px;
+    overflow: scroll;
+    padding: 1.5rem;
+    position: absolute;
+    right: 5%;
+    top: 3.5rem;
+    width: 90%;
+  }
+}
+
