--- a/resources/sass/_button.scss
+++ b/resources/sass/_button.scss
@@ -70,6 +70,152 @@
 
 }
 
+.button_column {
+  border: 1px solid #FF367F;
+  background-color: #FFBEDA;
+  border-radius: .25rem;
+  color: $grey-2;
+  cursor: pointer;
+  display: inline-block;
+  font-family: inherit;
+  font-size: 1rem;
+  line-height: 1;
+  outline: none;
+  padding: .5rem .75rem;
+  text-decoration: none;
+  transition:
+    border-color 300ms ease-in-out,
+    color 300ms ease-in-out;
+
+  &:hover {
+    border-color: $grey-1;
+    color: inherit;
+  }
+
+  .icon {
+    margin-right: .5em;
+  }
+
+  &--link {
+    border: 0;
+    padding: 0.7rem 1.2rem;
+    font-size: 1.2rem;
+  }
+
+  &--inverse {
+    background: $text-color;
+    border-color: $text-color;
+    color: #fff;
+    transition: opacity 300ms ease-in-out;
+
+    &:hover {
+      background: $text-color;
+      color: #fff;
+      opacity: .8;
+    }
+  }
+
+  &--fluid {
+    width: 100%;
+  }
+
+  &--like {
+    .icon {
+      color: $red;
+    }
+  }
+
+  &--liked {
+    background: $red;
+    border-color: $red;
+    color: #fff;
+
+    .icon {
+      color: #fff;
+    }
+
+    &:hover {
+      border-color: $red;
+      color: #fff;
+      opacity: .8;
+    }
+  }
+
+}
+
+.button_notes {
+  border: 1px solid #2DFF57;
+  background-color: #CBFFD3;
+  border-radius: .25rem;
+  color: $grey-2;
+  cursor: pointer;
+  display: inline-block;
+  font-family: inherit;
+  font-size: 1rem;
+  line-height: 1;
+  outline: none;
+  padding: .5rem .75rem;
+  text-decoration: none;
+  transition:
+    border-color 300ms ease-in-out,
+    color 300ms ease-in-out;
+
+  &:hover {
+    border-color: $grey-1;
+    color: inherit;
+  }
+
+  .icon {
+    margin-right: .5em;
+  }
+
+  &--link {
+    border: 0;
+    padding: 0.7rem 1.2rem;
+    font-size: 1.2rem;
+  }
+
+  &--inverse {
+    background: $text-color;
+    border-color: $text-color;
+    color: #fff;
+    transition: opacity 300ms ease-in-out;
+
+    &:hover {
+      background: $text-color;
+      color: #fff;
+      opacity: .8;
+    }
+  }
+
+  &--fluid {
+    width: 100%;
+  }
+
+  &--like {
+    .icon {
+      color: $red;
+    }
+  }
+
+  &--liked {
+    background: $red;
+    border-color: $red;
+    color: #fff;
+
+    .icon {
+      color: #fff;
+    }
+
+    &:hover {
+      border-color: $red;
+      color: #fff;
+      opacity: .8;
+    }
+  }
+
+}
+
 .change{
   display: inline-block;
   background-color: #02bcf5;/*背景色*/
