--- a/resources/sass/_column-form.scss
+++ b/resources/sass/_column-form.scss
@@ -85,7 +85,7 @@ border: none;
 }
 
 .text_form {
-  background: #807c7c88;
+  background: #f8f8f8;
   display: block;
   font-size: 16px;
   padding: 12px 15px;
