--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -117,6 +117,125 @@
   }
 }
 
+.navbar_column {
+  align-items: center;
+  background: #FF367F;
+  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, .1);
+  display: flex;
+  height: 4rem;
+  justify-content: space-between;
+  left: 0;
+  padding: 2%;
+  position: fixed;
+  right: 0;
+  top: 0;
+  z-index: 3;
+
+  &__brand {
+    color: inherit;
+    font-family: Merriweather, serif;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-decoration: none;
+    margin-left: 2em;
+
+    &:visited {
+      color: inherit;
+    }
+
+    &:hover {
+      opacity: .6;
+    }
+  }
+
+  .bm-burger-button {
+    position: fixed;
+    width: 2.5em;
+    height: 2em;
+    left: 1.2em;
+    top: 1.2em;
+    cursor: pointer;
+  }
+  .bm-burger-bars {
+    background-color: #373a47;
+  }
+  .line-style {
+    position: absolute;
+    height: 20%;
+    left: 0;
+    right: 0;
+  }
+  .cross-style {
+    position: absolute;
+    top: 12px;
+    right: 2px;
+    cursor: pointer;
+  }
+  .bm-cross {
+    background: #bdc3c7;
+  }
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  .bm-menu {
+    height: 100%; /* 100% Full-height */
+    width: 0; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1000; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: rgb(63, 63, 65); /* Black*/
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+    transition: 0.5s; /*0.5 second transition effect to slide in the sidenav*/
+  }
+
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+  .bm-item-list {
+    color: #b8b7ad;
+    margin-left: 10%;
+    font-size: 20px;
+  }
+  .bm-item-list > * {
+    display: flex;
+    text-decoration: none;
+    padding: 0.7em;
+  }
+  .bm-item-list > * > span {
+    margin-left: 10px;
+    font-weight: 700;
+    color: white;
+  }
+
+
+  &__chart {
+    color: inherit;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-decoration: none;
+
+    &:visited {
+      color: inherit;
+    }
+
+    &:hover {
+      opacity: .6;
+    }
+  }
+
+  &__menu {
+    align-items: center;
+    display: flex;
+  }
+
+  &__item {
+    margin-left: 1rem;
+  }
+}
+
 @media screen and ( max-width:479px ) {
   .navbar {
     align-items: center;
